  corresponding plugins:
  - Go_to_Clipper (to Clipper plugin)
  - Go_to_Console (to Console plugin)
  - Show_Dual_Diff (to JDiff plugin)
- The Replace All command now shows the replacement results in the
  status bar, not in a dialog box
- The HyperSearch command now shows the number of matches found in the
  HyperSearch Results window, not in a dialog box

+ Bug Fixes

- README.txt, CHANGES.txt, etc. were missing from jedit.jar
- Setting the file system browser's default path to 'favorites' didn't
  work
- In an abbrev expansion, $$1 will now be replaced by a dollar, followed
  by the value of the first positional parameter. Previously, the first
  dollar sign would cause problems
- 'Quick HyperSearch' command didn't work
- When running on Java 2, jEdit uses Java2D text rendering and
  measurement code. This should finally fix the 'caret drawn in wrong
  place' bug, even when anti-aliasing is enabled
- jEdit.openFiles() didn't setBuffer(), so when jEdit connected to
  another instance, the new instance opened the necessary files, but
  never displayed them

* Version 3.2pre5

+ New Features

- BeanShell 1.1a18:
  - Better error reporting
  - Cleaned up internals
  - Performance improvements
  - You can now access JavaBeans properties using bean.prop or
    bean{"prop"} syntax
  - 'import' statements can be used in any block scope, not just top
    level. This means you can have import statements in actions.xml, for
    example.
  - Some jEdit code dealing with BeanShell has been cleaned up
- The three sample 'Hello' plugins included with the source download
  have been replaced with a single, more comprehensive demonstration
  plugin written by John Gellene named 'QuickNotepad'
- Omnimark syntax highlighting (Lionel Fiol)
- Velocity syntax highlighting (Saimon Moore)

+ Enhancements

- Updated XSL mode (Ollie Rutherfurd)
- A set of XSL abbreviations is now included in the default abbreviation
  set
- The 'Update Plugins' dialog box now deletes obsolete plugins